<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="_0">0</string>
    <string name="_3_point">+3 Point</string>
    <string name="_2_point">+2 Point</string>
    <string name="free_throw">Free Throw</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
    <string name="__0">0</string>
</resources>
